[package]
name = "project-earth"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = "22.1.0"
winit = "0.30.5"
pollster = "0.3"
instant = "0.1"
cgmath = { version = "0.18.0", features = ["swizzle"] }
bytemuck = { version = "1.19.0", features = ["derive"] }
tokio = { version = "1.41.0", features = ["full"] }
reqwest = "0.12.9"
futures = "0.3.31"
imgui-wgpu = { git = "https://github.com/Yatekii/imgui-wgpu-rs.git" }
imgui = "0.12.0"
imgui-winit-support = "0.13.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
instant = { version = "0.1", features = [ "wasm-bindgen" ] }
